edited config.yml file for url

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title:            'Grassroots September'
 description:      'Sources from the CCSLD'
-url:              'https://github.com/jm-chris.github.io.git'
+url:              'https://jm-chris.github.io'
 baseurl:          '/grassroots_september'
 logo:             '/assets/logo.png'
 
